--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,26 @@
 # Basic Information 
-title: Your Name
-position: Ph.D. Student
-affiliation: Your Affiliation
-email: yourname (at) example.edu
+title: Luiz Lara
+position: Ph.D. Candidate
+affiliation: Unicamp - Br
+email: luizlara (at) ime.unicamp.br
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: minimal light
-description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
+keywords: laplacian ginzburg landau homogeneous spaces
+description: This is Luiz Lara homepage, here you will find my reasearch interests and works. 
 canonical: https://minimal-light-theme.yliu.me/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/
-cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/
-linkedin: https://www.linkedin.com/
-twitter: https://twitter.com/
+cv_link: http://lattes.cnpq.br/4818034475569198
+github_link: https://github.com/LuizLara1
+twitter: https://twitter.com/LuizLara18
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/avatar.png
-favicon: ./assets/img/favicon.png
+avatar: ./assets/img/site.png
+favicon: ./assets/img/PRE_VERM.png
 favicon_dark: ./assets/img/favicon-dark.png
 
 # Footnote
