--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ twitter: https://twitter.com/LuizLara18
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
 avatar: ./assets/img/site.png
 favicon: ./assets/img/PRE_VERM.png
-favicon_dark: ./assets/img/favicon-dark.png
+#favicon_dark: ./assets/img/favicon-dark.png
 
 # Footnote
 # You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
