--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: luizlara (at) ime.unicamp.br
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: laplacian ginzburg landau homogeneous spaces
+keywords: laplacian ginzburg landau stable vector bundles
 description: This is Luiz Lara homepage, here you will find my reasearch interests and works. 
 canonical: https://minimal-light-theme.yliu.me/
 
